# paper-daily-reading--bot

./: .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml
.github/workflows/: daily-paper-bot.yml  daily.yml
src/paper_daily_reading_bot/: __init__.py  __main__.py  cli.py  config.py  emailer.py  models.py  pipeline.py  report.py  scoring.py  utils.py
src/paper_daily_reading_bot/sources/: __init__.py  arxiv.py  base.py  elsevier.py  ieee.py  openalex.py  rss.py  semantic_scholar.py
tests/: test_config.py  test_dates.py  test_report.py  test_scoring.py  test_sources.py
