[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-daily-reading-bot"
version = "0.1.0"
description = "Daily paper monitoring and Chinese HTML report email bot."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "paper-daily-reading-bot" }]
dependencies = [
  "feedparser>=6.0.11",
  "python-dateutil>=2.9.0",
  "PyYAML>=6.0.1",
  "requests>=2.32.0",
  "scikit-learn>=1.3.0",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
paper-daily-reading-bot = "paper_daily_reading_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
